# project_avia

./: .env  .gitignore  alembic.ini  config.py  main.py  pyproject.toml
images/: main_image.html
migrations/: env.py
models/: good.py  users.py
public/: db.py  router_tickets.py  router_users.py
