[tool.poetry]
name = "project-avia"
version = "0.1.0"
description = ""
authors = ["ArtemLatyshev1 <artemlinkin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg = "^3.1.19"
asyncpg = "^0.29.0"
postgres = "^4.0"
pydantic-settings = "^2.2.1"
fastapi-sqlalchemy = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
